Project/Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;H:\CSIII\mayflower3.3.7.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\s572200\Documents\GitHub\fallproject\Project\Project
-d
C:\Users\s572200\Documents\GitHub\fallproject\Project\Project\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\s572200\Documents\GitHub\fallproject\Project\Project\Player.java
<---- end of javadoc command ---->
Loading source file C:\Users\s572200\Documents\GitHub\fallproject\Project\Project\Player.java...
C:\Users\s572200\Documents\GitHub\fallproject\Project\Project\Player.java:58: error: ')' expected
        else if(getX() <= 1 && Mayflower.getWorld().equals()
                                                            ^
1 error
